--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
-    "redux-logger": "^3.0.6"
+    "react-scripts": "3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
